--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav class="inline-block">
                 <ul>
                     <li class="inline-block">About</li>
-                    <li class="inline-block">Skills</li>
+                    <li class="inline-block"><a href="skills.html">Skills</a></li>
                     <li class="inline-block">Work</li>
                     <li class="inline-block">Contact</li>
                 </ul>
