--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 
     <body>
         <header class="navigation">
-            <div>
+            <div class="inline-block logo">
                 <!--for some reason, the CSS wasn't being applied to the image even though the parent (<div>) had both inlineblock and logo class applied-->
 
                     <!--used div.logo but css still wasn't applying to the <img> -->
                     
                 <!--moved the class into img element here-->
-                <img class="inline-block logo" src="images/Alekh Sharma-1.png"> 
+                <img class="logo" src="images/Alekh Sharma-1.png"> 
             </div>
 
             <nav class="inline-block">
