--- a/skills.html
+++ b/skills.html
@@ -18,7 +18,7 @@
 
             <nav class="inline-block">
                 <ul>
-                    <li class="inline-block">About</li>
+                    <li class="inline-block"><a href="index.html">About</a></li>
                     <li class="inline-block">Skills</li>
                     <li class="inline-block">Work</li>
                     <li class="inline-block">Contact</li>
