--- a/skills.html
+++ b/skills.html
@@ -20,7 +20,7 @@
                 <ul>
                     <li class="inline-block"><a href="index.html">About</a></li>
                     <li class="inline-block">Skills</li>
-                    <li class="inline-block">Work</li>
+                    <li class="inline-block"><a href="myWork.html">Work</a></li>
                     <li class="inline-block">Contact</li>
                 </ul>
             </nav>
