--- a/myWork.html
+++ b/myWork.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link href="css/index.css" type="text/css" rel="stylesheet">
+<link href="css/skills.css" type="text/css" rel="stylesheet">
 <html>
     <head>
         <title></title>
@@ -30,21 +30,21 @@
             <h1>My Work</h1>
             <div class="flexContainer">
                 <div>
-                    <img>
-                    <h4>User Experience</h4>
+                    <img class="pics" src="images/Screenshot 2023-08-10 124352.png">
+                    <h4>ChefGPT</h4>
+                    <p>Have you ever wanted to know what recipes you can make at home with the ingredients you already have? With “ChefGPT” you can input ingredients and not only will it find you the easiest recipes to make, it can do much more!</p>
+                    <button>View Project</button>
+                </div>
+                <div>
+                    <img class="pics" src="images/Screenshot 2023-08-10 130905.png">
+                    <h4>Feline Resuce</h4>
                     <p></p>
                     <button>View Project</button>
                 </div>
                 <div>
                     <img>
-                    <h4>User Interface</h4>
-                    <p>.</p>
-                    <button>View Project</button>
-                </div>
-                <div>
-                    <img>
-                    <h4>Web Development</h4>
-                    <p></p>
+                    <h4>Project 3</h4>
+                    <p>Project is WIP</p>
                     <button>View Project</button>
                 </div>
 
