--- a/skills.html
+++ b/skills.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link href="css/index.css" type="text/css" rel="stylesheet">
+<link href="css/skills.css" type="text/css" rel="stylesheet">
 <html>
     <head>
         <title></title>
@@ -30,17 +30,17 @@
             <h1>My UX Skills</h1>
             <div class="flexContainer">
                 <div>
-                    <img src="images/person-icon-476x512-hr6biidg.png">
+                    <img class="pics" src="images/person-icon-476x512-hr6biidg.png">
                     <h3>User Experience</h3>
                     <p>My approach to User Experience is centered around the user based on their needs, behaviors, and pains. By identifying these things, I am able to define goals and questions that can solve the issue at hand. From there, I can use methods such as 1-on-1 interviews, surveys, usability tests and more to get a better understanding of how to add value. After conducting interviews I am able to outline a storyboard and create a rough draft of a prototype. After creating a prototype, I always make sure to run different tests with different users to try and refine the protoype.</p>
                 </div>
                 <div>
-                    <img src="images/4587305.png">
+                    <img class="pics" src="images/4587305.png">
                     <h3>User Interface</h3>
                     <p>The skills I have for User Interface is that I try to make sure that information is streamlined properly placed for the user to find easily. Making sure there isn't too much content on one page, using a sitemap to sort pages into different sections, having a breadcrumb trail so the user understands where they are on a webpage, and more. UI also accounts for styling with appropriate colors and navigation elements. I am able to create styleguides that include color palattes, typography, graphics, patterns and more.</p>
                 </div>
                 <div>
-                    <img src="images/145-1451218_web-development-web-development-icon-free-png-transparent.png">
+                    <img class="pics" src="images/145-1451218_web-development-web-development-icon-free-png-transparent.png">
                     <h3>Web Development</h3>
                     <p>The skills I have learned for web Development include a working knowledge of HTML, CSS, Javascript, and JQuery. With these 4 elements, I am able to understand the capabilites of front-end web Development and better understand the scope of what is achievable when desiging an app or webpage for users.</p>
                 </div>
